ingress-staging.yaml
# https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/#backend-protocol
# https://www.digitalocean.com/community/tutorials/how-to-set-up-an-nginx-ingress-with-cert-manager-on-digitalocean-kubernetes-es#paso-2-configurar-el-controlador-de-ingress-de-nginx-en-kubernetes
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nombre-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - subdomionio.dominio.cl
    secretName: nombre-certificado
  rules:
  - host: subdomionio.dominio.cl
    http:
      paths:
      - path: /
        backend:
          serviceName: echoserver
          servicePort: 80
